--- a/ActivityWebsite/Views/Manage/Index.cshtml
+++ b/ActivityWebsite/Views/Manage/Index.cshtml
@@ -3,85 +3,223 @@
     ViewBag.Title = "Manage";
 }
 
-<h2>@ViewBag.Title.</h2>
+@section introdution{
+    <!-- Breadcrumb Begin -->
+    <section class="breadcrumb-option set-bg" data-setbg="/Content/Media/Images/templates/breadcrumb.jpg">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="breadcrumb__text">
+                        <h2>Manage Account</h2>
+                        <div class="breadcrumb__widget">
+                            <a href="@Url.Action("Index", "Home")">Index</a>
+                            <span>Manage Account</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Breadcrumb End -->
+}
 
-<p class="text-success">@ViewBag.StatusMessage</p>
-<div>
-    <h4>Change your account settings</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>Password:</dt>
+<!-- Blog Details Section Begin -->
+<section class="blog-details spad">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-4 order-lg-1 order-2">
+
+                <!-- CARD -->
+                <div class="card" style="width: 18rem;">
+
+                    <div class="image d-flex justify-content-center">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/12/User_icon_2.svg/1024px-User_icon_2.svg.png"
+                             width="150px" height="157px" alt="Cinque Terre">
+                    </div>
+
+                    <div class="card-body">
+                        <h5 class="card-title text-center">@Model.user.DisplayName</h5>
+
+                        <div class="text-center">
+                            <p>Joined at @Model.user.CreatedAt.ToString("dd, MMM yyyy")</p>
+                            <p class="userId">
+                                ID: @Model.user.Id <i title="Copy"
+                                                      user-id="5f55b66889b8060040bd7632"
+                                                      style="cursor:pointer;color: rgb(99, 99, 219)" class="copyIdIcon fas fa-copy"
+                                                      aria-hidden="true"></i><span class="sr-only">Copy</span>
+                            </p>
+
+                            @if (Model.user.authenticateType == "Facebook")
+                            {
+                                <i title="Authenticate With Facebook" style="color: blue" class="fab fa-facebook-f"></i>
+                            }
+                            else if (Model.user.authenticateType == "Google")
+                            {
+                                <i title="Authenticate With Google" style="color: red" class="fab fa-google"></i>
+                            }
+                        </div>
+
+                    </div>
+                </div>
+
+                <div style="margin: 10px;"></div>
+
+                <!-- Menu Navigation -->
+                <div style="width: 18rem;">
+
+                    <div class="sidebar-menu">
+                        <a href="#" class="sidebar-item">
+                            <i class="sidebar-icon fas fa-user-circle"></i>
+                            <span class="sidebar-text active-link">Profile</span>
+                            <span class="sidebar-status"></span>
+                        </a>
+                        <a href="#" class="sidebar-item">
+                            <i class="sidebar-icon fas fa-baseball-ball"></i>
+                            <span class="sidebar-text">Clubs And Facilities</span>
+                        </a>
+                        <a href="#" class="sidebar-item">
+                            <i class="sidebar-icon fas fa-book-medical"></i>
+                            <span class="sidebar-text">Following</span>
+                        </a>
+                        <a href="#" class="sidebar-item">
+                            <i class="sidebar-icon fas fa-history"></i>
+                            <span class="sidebar-text">History</span>
+                        </a>
+                        <a href="#" class="sidebar-item">
+                            <i class="sidebar-icon fas fa-bug"></i>
+                            <span class="sidebar-text">Reports</span>
+                        </a>
+                    </div>
+
+
+                </div>
+
+
+
+            </div>
+            <div class="col-lg-8 order-lg-2 order-1">
+                <div class="border text-center" style="padding: 10px;">
+                    <h3><i class="fas fa-shield-alt"></i>   Security</h3>
+                    <p><strong>Username:</strong> @Model.user.UserName [<a class="link-edit" href="#"> Change </a>]</p>
+                    <p>
+                        <strong>Password:</strong> @(Model.user.PasswordHash == null ? "Don't have password" : "******") [
+                        @if (Model.user.PasswordHash != null)
+                        {
+                            <a class="link-edit" href="#"> Change Password </a>
+                        }
+                        else
+                        {
+                            <a class="link-edit" href="#"> Setup </a>
+                        }
+                        ]
+                    </p>
+                    <p>
+                        <strong>Email:</strong> @Model.user.Email
+                        @if (Model.user.EmailConfirmed)
+                        {
+                            <i style="color:green" title="Email has been confirm" class="fas fa-check-circle"></i>@Html.Raw("   [")<a class="link-edit" href="#"> Change Email </a>@Html.Raw("]")
+                        }
+                        else
+                        {
+                            <i style="color:red" title="Email not confirm" class="far fa-times-circle"></i>@Html.Raw("   [")<a class="link-edit" href="#"> Confirm Email </a> @Html.Raw("]")
+                        }
+                    </p>
+                </div>
+
+                <div class="border text-center mt-3" style="padding: 10px;">
+                    <h3 style="margin: 10px;"><i class="fas fa-user-edit"></i>   Personal Information</h3>
+                    <p><strong>Display Name:</strong> @Model.user.DisplayName</p>
+                    <p><strong>Phone Number:</strong> @Model.user.PhoneNumber</p>
+                    <div class="text-center">
+                        <button class="btn btn-primary"><i class="fas fa-edit"></i>   Edit</button>
+                    </div>
+
+                </div>
+
+
+            </div>
+        </div>
+    </div>
+</section>
+<!-- Blog Details Section End -->
+@*
+        <h2>@ViewBag.Title.</h2>
+
+        <p class="text-success">@ViewBag.StatusMessage</p>
+        <div>
+            <h4>Change your account settings</h4>
+            <hr />
+            <dl class="dl-horizontal">
+                <dt>Password:</dt>
+                <dd>
+                    [
+                    @if (Model.HasPassword)
+                    {
+                        @Html.ActionLink("Change your password", "ChangePassword")
+                    }
+                    else
+                    {
+                        @Html.ActionLink("Create", "SetPassword")
+                    }
+                    ]
+                </dd>
+                <dt>External Logins:</dt>
+                <dd>
+                    @Model.Logins.Count [
+                    @Html.ActionLink("Manage", "ManageLogins") ]
+                </dd>
+                @*
+                    Phone Numbers can used as a second factor of verification in a two-factor authentication system.
+
+                     See <a href="https://go.microsoft.com/fwlink/?LinkId=403804">this article</a>
+                        for details on setting up this ASP.NET application to support two-factor authentication using SMS.
+
+                     Uncomment the following block after you have set up two-factor authentication
+        <dt>Phone Number:</dt>
         <dd>
-            [
-            @if (Model.HasPassword)
+            @(Model.PhoneNumber ?? "None")
+            @if (Model.PhoneNumber != null)
             {
-                @Html.ActionLink("Change your password", "ChangePassword")
+                <br />
+                <text>[&nbsp;&nbsp;@Html.ActionLink("Change", "AddPhoneNumber")&nbsp;&nbsp;]</text>
+                using (Html.BeginForm("RemovePhoneNumber", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+                {
+                    @Html.AntiForgeryToken()
+                    <text>[<input type="submit" value="Remove" class="btn-link" />]</text>
+                }
             }
             else
             {
-                @Html.ActionLink("Create", "SetPassword")
+                <text>[&nbsp;&nbsp;@Html.ActionLink("Add", "AddPhoneNumber")
             }
-            ]
         </dd>
-        <dt>External Logins:</dt>
-        <dd>
-            @Model.Logins.Count [
-            @Html.ActionLink("Manage", "ManageLogins") ]
-        </dd>
-        @*
-            Phone Numbers can used as a second factor of verification in a two-factor authentication system.
-             
-             See <a href="https://go.microsoft.com/fwlink/?LinkId=403804">this article</a>
-                for details on setting up this ASP.NET application to support two-factor authentication using SMS.
-             
-             Uncomment the following block after you have set up two-factor authentication
-        *@
-        @*  
-            <dt>Phone Number:</dt>
-            <dd>
-                @(Model.PhoneNumber ?? "None")
-                @if (Model.PhoneNumber != null)
+    <dt>Two-Factor Authentication:</dt>
+    <dd>
+        <p>
+            There are no two-factor authentication providers configured. See <a href="https://go.microsoft.com/fwlink/?LinkId=403804">this article</a>
+            for details on setting up this ASP.NET application to support two-factor authentication.
+        </p>
+        if (Model.TwoFactor)
+            {
+                using (Html.BeginForm("DisableTwoFactorAuthentication", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
                 {
-                    <br />
-                    <text>[&nbsp;&nbsp;@Html.ActionLink("Change", "AddPhoneNumber")&nbsp;&nbsp;]</text>
-                    using (Html.BeginForm("RemovePhoneNumber", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-                    {
-                        @Html.AntiForgeryToken()
-                        <text>[<input type="submit" value="Remove" class="btn-link" />]</text>
-                    }
+                    @Html.AntiForgeryToken()
+                    <text>Enabled
+                    <input type="submit" value="Disable" class="btn btn-link" />
+                    </text>
                 }
-                else
+            }
+            else
+            {
+                using (Html.BeginForm("EnableTwoFactorAuthentication", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
                 {
-                    <text>[&nbsp;&nbsp;@Html.ActionLink("Add", "AddPhoneNumber")
+                    @Html.AntiForgeryToken()
+                    <text>Disabled
+                    <input type="submit" value="Enable" class="btn btn-link" />
+                    </text>
                 }
-            </dd>
-        *@
-        <dt>Two-Factor Authentication:</dt>
-        <dd>
-            <p>
-                There are no two-factor authentication providers configured. See <a href="https://go.microsoft.com/fwlink/?LinkId=403804">this article</a>
-                for details on setting up this ASP.NET application to support two-factor authentication.
-            </p>
-            @*@if (Model.TwoFactor)
-                {
-                    using (Html.BeginForm("DisableTwoFactorAuthentication", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-                    {
-                        @Html.AntiForgeryToken()
-                        <text>Enabled
-                        <input type="submit" value="Disable" class="btn btn-link" />
-                        </text>
-                    }
-                }
-                else
-                {
-                    using (Html.BeginForm("EnableTwoFactorAuthentication", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-                    {
-                        @Html.AntiForgeryToken()
-                        <text>Disabled
-                        <input type="submit" value="Enable" class="btn btn-link" />
-                        </text>
-                    }
-                }*@
-        </dd>
-    </dl>
-</div>
+            }
+    </dd>
+        </dl>
+    </div>
+*@
