--- a/ActivityWebsite/Views/Account/ForgotPassword.cshtml
+++ b/ActivityWebsite/Views/Account/ForgotPassword.cshtml
@@ -1,27 +1,15 @@
 ﻿@model ActivityWebsite.Models.ForgotPasswordViewModel
 @{
     ViewBag.Title = "Forgot your password?";
+    ViewBag.BCHeader = "Forgot Password";
+    ViewBag.BCAction = "Index";
+    ViewBag.BCController = "Home";
+    ViewBag.BCActionText = "Home";
 }
 
-@section introdution{
-    <!-- Breadcrumb Begin -->
-    <section class="breadcrumb-option set-bg" data-setbg="/Content/Media/Images/templates/breadcrumb.jpg">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="breadcrumb__text">
-                        <h2>Forgot Password</h2>
-                        <div class="breadcrumb__widget">
-                            <a href="@Url.Action("Index", "Home")">Home</a>
-                            <span>Forgot Password</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- Breadcrumb End -->
-}
+
+@Html.Partial("_Breadcrumb")
+
 
 @section css{
     <link rel="stylesheet" href="~/Content/css/User/Account/ForgotPassword.css" type="text/css">
@@ -40,10 +28,10 @@
         </div>
     }
 
-<div class="subscribe-form">
-    @Html.TextBoxFor(m => m.Email, new { @class = "subscribe-form-input", @placeholder="Enter your email" })
-    <button type="submit" class="subscribe-form-button">Send Email</button>
-</div>
+    <div class="subscribe-form">
+        @Html.TextBoxFor(m => m.Email, new { @class = "subscribe-form-input", @placeholder = "Enter your email" })
+        <button type="submit" class="subscribe-form-button">Send Email</button>
+    </div>
 }
 
 
