--- a/ActivityWebsite/Views/Account/ResetPassword.cshtml
+++ b/ActivityWebsite/Views/Account/ResetPassword.cshtml
@@ -1,30 +1,16 @@
 ﻿@model ActivityWebsite.Models.ResetPasswordViewModel
 @{
     ViewBag.Title = "Reset password";
+    ViewBag.BCHeader = "Reset Password";
+    ViewBag.BCAction = "ForgotPassword";
+    ViewBag.BCController = "Account";
+    ViewBag.BCActionText = "Forgot Password";
 }
-@section introdution{
-    <!-- Breadcrumb Begin -->
-    <section class="breadcrumb-option set-bg" data-setbg="/Content/Media/Images/templates/breadcrumb.jpg">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="breadcrumb__text">
-                        <h2>Reset Password</h2>
-                        <div class="breadcrumb__widget">
-                            <a href="@Url.Action("ForgotPassword", "Home")">Forgot Password</a>
-                            <span>Reset Password</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- Breadcrumb End -->
-}
-
 @section css{
     <link rel="stylesheet" href="~/Content/css/User/Account/ResetPassword.css" type="text/css">
 }
+
+@Html.Partial("_Breadcrumb")
 
 @if (ViewBag.errorMessage != null)
 {
