--- a/ActivityWebsite/Views/Manage/SetPassword.cshtml
+++ b/ActivityWebsite/Views/Manage/SetPassword.cshtml
@@ -1,39 +1,56 @@
 ﻿@model ActivityWebsite.Models.SetPasswordViewModel
 @{
-    ViewBag.Title = "Create Password";
+    ViewBag.Title = "Set Password";
+    ViewBag.BCHeader = "Set Password";
+    ViewBag.BCAction = "Index";
+    ViewBag.BCController = "Manage";
+    ViewBag.BCActionText = "Manage";
+
+    ViewBag.ProfileLinkClass = "active-link";
 }
 
-<h2>@ViewBag.Title.</h2>
-<p class="text-info">
-    You do not have a local username/password for this site. Add a local
-    account so you can log in without an external login.
-</p>
+@Html.Partial("_Breadcrumb")
+<section class="blog-details spad">
+    <div class="container">
+        <div class="row">
+            @Html.Partial("_LeftPanel")
+            <div class="col-lg-8 order-lg-2 order-1">
+                @using (Html.BeginForm("SetPassword", "Manage", FormMethod.Post, new { role = "form" }))
+                {
+                    @Html.AntiForgeryToken()
+                    if (ViewBag.successMessage != null)
+                    {
+                        <div class="alert alert-success" role="alert">
+                            @ViewBag.successMessage
+                        </div>
+                    }
 
-@using (Html.BeginForm("SetPassword", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-{
-    @Html.AntiForgeryToken()
+                    <hr />
 
-    <h4>Create Local Login</h4>
-    <hr />
-    @Html.ValidationSummary("", new { @class = "text-danger" })
-    <div class="form-group">
-        @Html.LabelFor(m => m.NewPassword, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.NewPassword, new { @class = "form-control" })
+                    <p class="text-info">
+                        You do not have a password for this site. Add a password to your
+                        account so you can log in without an external login.
+                    </p>
+                    <div style="padding: 10px">
+
+                        @Html.ValidationSummary("", new { @class = "text-danger" })
+                        <div class="form-group">
+                            @Html.LabelFor(m => m.NewPassword, new { @class = "control-label" })
+                            @Html.PasswordFor(m => m.NewPassword, new { @class = "ip-focus" })
+                        </div>
+                        <div class="form-group">
+                            @Html.LabelFor(m => m.ConfirmPassword, new { @class = "control-label" })
+                            @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "ip-focus" })
+                        </div>
+                        <div class="form-group text-center">
+                            <button class="btn btn-warning"> Set up</button>
+                        </div>
+                    </div>
+                }
+            </div>
         </div>
     </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
-        </div>
-    </div>
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Set password" class="btn btn-default" />
-        </div>
-    </div>
-}
+</section>
 @section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
+    @Scripts.Render("~/plugin/jqueryval")
 }
