--- a/ActivityWebsite/Views/Account/ConfirmEmail.cshtml
+++ b/ActivityWebsite/Views/Account/ConfirmEmail.cshtml
@@ -1,25 +1,13 @@
 ﻿@{
     ViewBag.Title = "Confirm Email";
+    ViewBag.BCHeader = "Connfirm Email";
+
+    ViewBag.BCActionText = "Register";
+    ViewBag.BCAction = "Register";
+    ViewBag.BCController = "Account";
 }
-@section introdution{
-    <!-- Breadcrumb Begin -->
-    <section class="breadcrumb-option set-bg" data-setbg="/Content/Media/Images/templates/breadcrumb.jpg">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="breadcrumb__text">
-                        <h2>Confirm Email</h2>
-                        <div class="breadcrumb__widget">
-                            <a href="@Url.Action("Register", "Home")">Register</a>
-                            <span>Confirm Email</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- Breadcrumb End -->
-}
+
+@Html.Partial("_Breadcrumb")
 
 <h2>@ViewBag.Title.</h2>
 @if (ViewBag.errorMessage != null)
