--- a/ActivityWebsite/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/ActivityWebsite/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,30 +1,18 @@
 ﻿@model ActivityWebsite.Models.ExternalLoginConfirmationViewModel
 @{
     ViewBag.Title = "Create New Account";
-}
-@section introdution{
-    <!-- Breadcrumb Begin -->
-    <section class="breadcrumb-option set-bg" data-setbg="/Content/Media/Images/templates/breadcrumb.jpg">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="breadcrumb__text">
-                        <h2>Create New Account</h2>
-                        <div class="breadcrumb__widget">
-                            <a href="@Url.Action("Login", "Home")">Login</a>
-                            <span>Create New Account</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- Breadcrumb End -->
+    ViewBag.BCHeader = "Create New Account";
+    ViewBag.BCAction = "Login";
+    ViewBag.BCController = "Account";
+    ViewBag.BCActionText = "Login";
 }
 
 @section css{
     <link rel="stylesheet" href="~/Content/css/User/Account/ExternalLoginConfirmation.css" type="text/css">
 }
+
+@Html.Partial("_Breadcrumb")
+
 
 <div class="signup">
     @using (Html.BeginForm("ExternalLoginConfirmation", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "signup-form", autocomplete = "off" }))
