--- a/ActivityWebsite/Views/Account/ExternalLoginFailure.cshtml
+++ b/ActivityWebsite/Views/Account/ExternalLoginFailure.cshtml
@@ -1,28 +1,16 @@
 ﻿@{
     ViewBag.Title = "Login Failure";
+    ViewBag.BCHeader = "Login";
+    ViewBag.BCAction = "Index";
+    ViewBag.BCController = "Home";
+    ViewBag.BCActionText = "Home";
 }
-@section introdution{
-    <!-- Breadcrumb Begin -->
-    <section class="breadcrumb-option set-bg" data-setbg="/Content/Media/Images/templates/breadcrumb.jpg">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="breadcrumb__text">
-                        <h2>Login</h2>
-                        <div class="breadcrumb__widget">
-                            <a href="@Url.Action("Index", "Home")">Home</a>
-                            <span>Login</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- Breadcrumb End -->
-}
+@Html.Partial("_Breadcrumb")
+
 <hgroup>
     <h3 class="text-danger">Unsuccessful login with service.</h3>
 </hgroup>
+
 
 @{
     if (ViewBag.errorMessage != null)
