--- a/ActivityWebsite/Views/Account/Login.cshtml
+++ b/ActivityWebsite/Views/Account/Login.cshtml
@@ -2,31 +2,17 @@
 @model LoginViewModel
 @{
     ViewBag.Title = "Log in";
+    ViewBag.BCHeader = "Log In";
+    ViewBag.BCAction = "Index";
+    ViewBag.BCController = "Home";
+    ViewBag.BCActionText = "Home";
 }
 
 @section css{
     <link rel="stylesheet" href="/Content/css/User/Account/Login.css" type="text/css">
 }
 
-@section introdution{
-    <!-- Breadcrumb Begin -->
-    <section class="breadcrumb-option set-bg" data-setbg="/Content/Media/Images/templates/breadcrumb.jpg">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="breadcrumb__text">
-                        <h2>Log in</h2>
-                        <div class="breadcrumb__widget">
-                            <a href="@Url.Action("Index", "Home")">Home</a>
-                            <span>Log in</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- Breadcrumb End -->
-}
+@Html.Partial("_Breadcrumb")
 
 <div class="signup">
     @using (Html.BeginForm("ExternalLogin", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @id = "form-login-service" }))
