--- a/ActivityWebsite/Views/Account/Register.cshtml
+++ b/ActivityWebsite/Views/Account/Register.cshtml
@@ -1,30 +1,18 @@
 ﻿@model ActivityWebsite.Models.RegisterViewModel
 @{
     ViewBag.Title = "Register";
+    ViewBag.BCHeader = "Register";
+    ViewBag.BCAction = "Index";
+    ViewBag.BCController = "Home";
+    ViewBag.BCActionText = "Home";
 }
-@section introdution{
-    <!-- Breadcrumb Begin -->
-    <section class="breadcrumb-option set-bg" data-setbg="/Content/Media/Images/templates/breadcrumb.jpg">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="breadcrumb__text">
-                        <h2>Register</h2>
-                        <div class="breadcrumb__widget">
-                            <a href="@Url.Action("Index", "Home")">Home</a>
-                            <span>Register</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- Breadcrumb End -->
-}
+
 
 @section css{
     <link rel="stylesheet" href="~/Content/css/User/Account/Register.css" type="text/css">
 }
+
+@Html.Partial("_Breadcrumb")
 
 <div class="signup">
     @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "signup-form", autocomplete = "off" }))
