--- a/ActivityWebsite/Views/Manage/ChangePassword.cshtml
+++ b/ActivityWebsite/Views/Manage/ChangePassword.cshtml
@@ -1,40 +1,62 @@
 ﻿@model ActivityWebsite.Models.ChangePasswordViewModel
 @{
     ViewBag.Title = "Change Password";
+    ViewBag.BCHeader = "Change Password";
+    ViewBag.BCAction = "Index";
+    ViewBag.BCController = "Manage";
+    ViewBag.BCActionText = "Manage";
+    ViewBag.ProfileLinkClass = "active-link";
 }
 
-<h2>@ViewBag.Title.</h2>
+@Html.Partial("_Breadcrumb")
 
-@using (Html.BeginForm("ChangePassword", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-{
-    @Html.AntiForgeryToken()
-    <h4>Change Password Form</h4>
-    <hr />
-    @Html.ValidationSummary("", new { @class = "text-danger" })
-    <div class="form-group">
-        @Html.LabelFor(m => m.OldPassword, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.OldPassword, new { @class = "form-control" })
+
+<section class="blog-details spad">
+    <div class="container">
+        <div class="row">
+            @Html.Partial("_LeftPanel")
+            <div class="col-lg-8 order-lg-2 order-1">
+                @if (ViewBag.successMessage != null)
+                {
+                    <div class="alert alert-success" role="alert">
+                        @ViewBag.successMessage
+                    </div>
+                }
+
+                @using (Html.BeginForm("ChangePassword", "Manage", FormMethod.Post))
+                {
+
+                    @Html.AntiForgeryToken()
+                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
+                    <div class="form-group">
+                        <label>Old Password:</label>
+                        @Html.PasswordFor(m => m.OldPassword, new { @class = "ip-focus", placeholder = "Enter your old password" })
+                        @Html.ValidationMessageFor(m => m.OldPassword, "", new { @class = "text-danger" })
+                    </div>
+
+                    <div class="form-group">
+                        <label>New Password:</label>
+                        @Html.PasswordFor(m => m.NewPassword, new { @class = "ip-focus", placeholder = "Enter your new password" })
+                        @Html.ValidationMessageFor(m => m.NewPassword, "", new { @class = "text-danger" })
+                    </div>
+
+                    <div class="form-group">
+                        <label>Confirm New Password:</label>
+                        @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "ip-focus", placeholder = "Confirm your new password" })
+                        @Html.ValidationMessageFor(m => m.ConfirmPassword, "", new { @class = "text-danger" })
+                    </div>
+
+                    <div class="form-group text-center">
+                        <button type="submit" class="btn btn-primary btn-lg">Change Password</button>
+                    </div>
+                }
+            </div>
         </div>
     </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.NewPassword, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.NewPassword, new { @class = "form-control" })
-        </div>
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
-        </div>
-    </div>
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Change password" class="btn btn-default" />
-        </div>
-    </div>
-}
+</section>
+
+
 @section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
+    @Scripts.Render("~/plugin/jqueryval")
 }
