--- a/ActivityWebsite/Views/Manage/Index.cshtml
+++ b/ActivityWebsite/Views/Manage/Index.cshtml
@@ -56,7 +56,7 @@
                         <strong>Email:</strong> @ViewBag.user.gererateEmailMask()
                         @if (ViewBag.user.EmailConfirmed)
                         {
-                            <i style="color:green" title="Email has been confirm" class="fas fa-check-circle"></i>@Html.Raw("   [")<a class="link-edit" href="#"> Change Email </a>@Html.Raw("]")
+                            <i style="color:green" title="Email has been confirm" class="fas fa-check-circle"></i>@Html.Raw("   [")<a class="link-edit" href="@Url.Action("ChangeEmail", "Manage")"> Change Email </a>@Html.Raw("]")
                         }
                         else
                         {
@@ -70,7 +70,7 @@
                     <p><strong>Display Name:</strong> @ViewBag.user.DisplayName</p>
                     <p><strong>Phone Number:</strong> @ViewBag.user.PhoneNumber</p>
                     <div class="text-center">
-                        <button class="btn btn-primary"><i class="fas fa-edit"></i>   Edit</button>
+                        <a href="@Url.Action("EditPersonalInformation", "Manage")"><button class="btn btn-primary"><i class="fas fa-edit"></i>   Edit</button></a>
                     </div>
 
                 </div>
