--- a/ActivityWebsite/Areas/Admin/Views/Category/Edit.cshtml
+++ b/ActivityWebsite/Areas/Admin/Views/Category/Edit.cshtml
@@ -1,4 +1,6 @@
-﻿@model ActivityWebsite.Areas.Admin.Models.CategoryEditViewModel
+﻿@using ActivityWebsite.Config
+@model ActivityWebsite.Areas.Admin.Models.CategoryEditViewModel
+
 @{
     ViewBag.title = "Edit category";
 }
@@ -23,7 +25,7 @@
     <div class="form-group">
         @Html.HiddenFor(m => m.CurrentImage)
         @Html.LabelFor(m => m.CurrentImage)
-        <img src="@Url.Content($"~/Content/Media/Images/Category/{Model.CurrentImage}")" class="rounded mx-auto d-block">
+        <img src="@Url.Content($"{ConfigurationApp.VIRTUAL_DIR_CATEGORY_IMAGE}/{Model.CurrentImage}")" class="rounded mx-auto d-block">
     </div>
 
     <div class="form-group">
