--- a/Template/index copy.html
+++ b/Template/index copy.html
@@ -172,6 +172,10 @@
                 <div class="col-lg-7">
                     <div class="home__about__pic">
                         <div class="home__about__pic__item large-item set-bg" data-setbg="img/about/about-1.jpg"></div>
+                        <div class="home__about__pic__item">
+                            <div class="home__about__pic__item__inner set-bg" data-setbg="img/about/about-2.jpg"></div>
+                            <div class="home__about__pic__item__inner set-bg" data-setbg="img/about/about-3.jpg"></div>
+                        </div>
                     </div>
                 </div>
                 <div class="col-lg-5">
@@ -180,10 +184,15 @@
                             <img src="img/icon.png" alt="">
                             <h2>Welcome to Zogin</h2>
                         </div>
-                        <p>Operation hours: Mon - Fri, 10:30 - 12:00</p>
-                        <p class="para-2">Establish at: 10-12-2017.</p>
-                        <a href="#" class="primary-btn">Follow</a>
-                        <a href="#" class="primary-btn">Join our chat box</a>
+                        <span>“What hurts today makes you stronger tomorrow.”</span>
+                        <p>We are offering internationally certified 200 Hour Yoga Teacher Training in Rishikesh and 300
+                            hour yoga teacher training in Rishikesh, India - Join us to have such life-transforming
+                            experience in The world capital of Yoga in Rishikesh.</p>
+                        <p class="para-2">Zogin is a great place for those who are in search of the ancient practice and
+                            true essence of yoga, meditation, health, peace and learning the art of creating a class to
+                            teach safely. We are passionate about adjustments and mainly focus on the alignment of the
+                            asanas.</p>
+                        <a href="#" class="primary-btn">MORE ABOUT US</a>
                     </div>
                 </div>
             </div>
@@ -198,7 +207,7 @@
                 <div class="col-lg-12">
                     <div class="section-title">
                         <img src="img/icon.png" alt="">
-                        <h2>Category</h2>
+                        <h2>Enjoy All Aspects Of Yoga</h2>
                     </div>
                 </div>
             </div>
@@ -266,7 +275,7 @@
             <div class="row">
                 <div class="col-lg-6">
                     <div class="chooseus__text">
-                        <h2>Description</h2>
+                        <h2>Why Choose Us</h2>
                         <p>We are offering internationally certified 200 Hour Yoga Teacher Training in Rishikesh and 300
                             hour yoga teacher training in Rishikesh, India - Join us to have such life-transforming
                             experience in The world capital of Yoga in Rishikesh.</p>
@@ -324,7 +333,9 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="section-title normal-title">
-                        <h2>Our post</h2>
+                        <h2>Upcoming Courses</h2>
+                        <p>The trainings are multi-style and you will learn and practice Hatha Vinyasa (flow)<br /> and
+                            Yin Yoga.</p>
                     </div>
                 </div>
             </div>
@@ -439,28 +450,58 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="section-title normal-title">
-                        <h2>Address</h2>
-                        <p>Bugis Junction.</p>
+                        <h2>Meet Our Instructors</h2>
+                        <p>Our Indian and western teachers are highly qualified and will be happy to share this<br />
+                            spiritual journey with you.</p>
                     </div>
                 </div>
             </div>
-                    <!-- Map Begin -->
-    <div class="map">
-        <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d49116.39176087041!2d-86.41867791216099!3d39.69977417971648!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x886ca48c841038a1%3A0x70cfba96bf847f0!2sPlainfield%2C%20IN%2C%20USA!5e0!3m2!1sen!2sbd!4v1586106673811!5m2!1sen!2sbd"
-            height="500" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-        <div class="map-inside">
-            <i class="icon_pin"></i>
-            <div class="inside-widget">
-                <h5>New York</h5>
-                <ul>
-                    <li>Phone: +65 11.188.888</li>
-                    <li>Add: 60-49 Road 11378 New York</li>
-                </ul>
+            <div class="row">
+                <div class="col-lg-3 col-md-4 col-sm-6">
+                    <div class="instructor__item">
+                        <div class="instructor__item__pic">
+                            <img src="img/instructor/instructor-1.jpg" alt="">
+                        </div>
+                        <div class="instructor__item__text">
+                            <h5>Emma Hale</h5>
+                            <span>Yoga Trainer</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-4 col-sm-6">
+                    <div class="instructor__item">
+                        <div class="instructor__item__pic">
+                            <img src="img/instructor/instructor-2.jpg" alt="">
+                        </div>
+                        <div class="instructor__item__text">
+                            <h5>Rebecca James</h5>
+                            <span>Yoga Trainer</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-4 col-sm-6">
+                    <div class="instructor__item">
+                        <div class="instructor__item__pic">
+                            <img src="img/instructor/instructor-3.jpg" alt="">
+                        </div>
+                        <div class="instructor__item__text">
+                            <h5>Melissa Smith</h5>
+                            <span>Yoga Trainer</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-4 col-sm-6">
+                    <div class="instructor__item">
+                        <div class="instructor__item__pic">
+                            <img src="img/instructor/instructor-4.jpg" alt="">
+                        </div>
+                        <div class="instructor__item__text">
+                            <h5>Emily Walker</h5>
+                            <span>Yoga Trainer</span>
+                        </div>
+                    </div>
+                </div>
             </div>
-        </div>
-    </div>
-    <!-- Map End -->
         </div>
     </section>
     <!-- Team Section End -->
