Add Create Post + Add checking inner Include Query

--- a/ActivityWebsite/Views/Club/Detail.cshtml
+++ b/ActivityWebsite/Views/Club/Detail.cshtml
@@ -23,5 +23,5 @@
 
 @section Scripts{
     <script async charset="utf-8" src="//cdn.embedly.com/widgets/platform.js"></script>
-    @Scripts.Render("~/dist/Detail.js")
+    @Scripts.Render("~/dist/Club/Detail.js")
 }
