--- a/ActivityWebsite/Views/Post/Create.cshtml
+++ b/ActivityWebsite/Views/Post/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
-    ViewBag.Title = "Edit Club";
-    ViewBag.BCHeader = "Edit Club";
+    ViewBag.Title = "Create Post";
+    ViewBag.BCHeader = "Create Post";
     ViewBag.BCAction = "";
     ViewBag.BCController = "";
     ViewBag.BCActionText = "";
@@ -11,12 +11,10 @@
 
 @Html.AntiForgeryToken()
 
-@Html.Hidden("__ClubId", (int)ViewBag.ClubId)
-
 <div id="root">
 
 </div>
 
 @section Scripts{
-    @Scripts.Render("~/dist/Club/Edit.js")
+    @Scripts.Render("~/dist/Post/Create.js")
 }
