--- a/Template/blog-details.html
+++ b/Template/blog-details.html
@@ -21,6 +21,16 @@
     <link rel="stylesheet" href="css/owl.carousel.min.css" type="text/css">
     <link rel="stylesheet" href="css/slicknav.min.css" type="text/css">
     <link rel="stylesheet" href="css/style.css" type="text/css">
+    <style>
+        .comment-single{
+            background: #c0c1c4;
+            padding: 1em;
+            margin: 10px;
+        }    
+        .comment-reply {
+            margin-left: 100px;
+        }
+    </style>
 </head>
 
 <body>
@@ -334,7 +344,47 @@
     <div class="leave-comment spad">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12">
+
+                <div class="col-sm-10 col-md-11 col-12 pb-4">
+                    <h1>Comments</h1>
+                    
+                    <div class="comment-single mt-4 text-justify"> 
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d2/Crystal_Clear_kdm_user_female.svg/1024px-Crystal_Clear_kdm_user_female.svg.png" class="rounded-circle" width="40" height="40">
+                        <h4 style="font-weight: bold;">Jhon Doe <span style="color:#6E7580; font-size: 15px;">20 October, 2018</span></h4>
+                        <div>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                        </div>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus numquam assumenda hic aliquam vero sequi velit molestias doloremque molestiae dicta?</p>
+                    </div>
+
+                    <div class="comment-single comment-reply mt-4 text-justify"> 
+                        <div class="mb-3">
+                            <p><i class="fa fa-reply" aria-hidden="true"></i>   Reply To Jhon Doe</p>
+                        </div>
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d2/Crystal_Clear_kdm_user_female.svg/1024px-Crystal_Clear_kdm_user_female.svg.png" class="rounded-circle" width="40" height="40">
+                        <h4 style="font-weight: bold;">Jhon Doe <span style="color:#6E7580; font-size: 15px;">20 October, 2018</span></h4>
+                        <div>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                        </div>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus numquam assumenda hic aliquam vero sequi velit molestias doloremque molestiae dicta?</p>
+                    </div>
+
+                    
+
+
+                   
+                </div>
+
+
+                <!--        <div class="col-lg-12">
                     <div class="leave__comment__text">
                         <h2>Leave A Comment</h2>
                         <form action="#">
@@ -362,7 +412,7 @@
                             </div>
                         </form>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
@@ -425,7 +475,11 @@
                     <div class="col-lg-6 col-md-6 col-sm-6">
                         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                         <div class="footer__copyright__text">
-                            <p>Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a></p>
+                            <p>Copyright &copy;
+                                <script>document.write(new Date().getFullYear());</script> All rights reserved | This
+                                template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a
+                                    href="https://colorlib.com" target="_blank">Colorlib</a>
+                            </p>
                         </div>
                         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                     </div>
