Add Table Club Manager

--- a/ActivityWebsite/Views/Manage/_LeftPanel.cshtml
+++ b/ActivityWebsite/Views/Manage/_LeftPanel.cshtml
@@ -44,9 +44,9 @@
                 <span class="sidebar-text @ViewBag.ProfileLinkClass">Profile</span>
                 <span class="sidebar-status"></span>
             </a>
-            <a href="#" class="sidebar-item">
+            <a href="@Url.Action("Club", "Manage")" class="sidebar-item">
                 <i class="sidebar-icon fas fa-baseball-ball"></i>
-                <span class="sidebar-text @ViewBag.ClubLinkClass">Clubs And Facilities</span>
+                <span class="sidebar-text @ViewBag.ClubLinkClass">Manage Clubs</span>
             </a>
             <a href="#" class="sidebar-item">
                 <i class="sidebar-icon fas fa-book-medical"></i>
