Add Remove Group Using Trigger

--- a/ActivityWebsite/Views/Manage/_LeftPanel.cshtml
+++ b/ActivityWebsite/Views/Manage/_LeftPanel.cshtml
@@ -48,6 +48,10 @@
                 <i class="sidebar-icon fas fa-baseball-ball"></i>
                 <span class="sidebar-text @ViewBag.ClubLinkClass">Manage Clubs</span>
             </a>
+            <a href="@Url.Action("Post", "Manage")" class="sidebar-item">
+                <i class="sidebar-icon fas fa-blog"></i>
+                <span class="sidebar-text @ViewBag.PostLinkClass">Manage Posts</span>
+            </a>
             <a href="#" class="sidebar-item">
                 <i class="sidebar-icon fas fa-book-medical"></i>
                 <span class="sidebar-text @ViewBag.FollowLinkClass">Following</span>
