--- a/ActivityWebsite/Views/Manage/_LeftPanel.cshtml
+++ b/ActivityWebsite/Views/Manage/_LeftPanel.cshtml
@@ -52,13 +52,9 @@
                 <i class="sidebar-icon fas fa-blog"></i>
                 <span class="sidebar-text @ViewBag.PostLinkClass">Manage Posts</span>
             </a>
-            <a href="#" class="sidebar-item">
+            <a href="@Url.Action("Following", "Manage")" class="sidebar-item">
                 <i class="sidebar-icon fas fa-book-medical"></i>
                 <span class="sidebar-text @ViewBag.FollowLinkClass">Following</span>
-            </a>
-            <a href="#" class="sidebar-item">
-                <i class="sidebar-icon fas fa-history"></i>
-                <span class="sidebar-text @ViewBag.HistoryLinkClass">History</span>
             </a>
             <a href="#" class="sidebar-item">
                 <i class="sidebar-icon fas fa-bug"></i>
