Add report client-side

--- a/ActivityWebsite/Views/Manage/_LeftPanel.cshtml
+++ b/ActivityWebsite/Views/Manage/_LeftPanel.cshtml
@@ -56,7 +56,7 @@
                 <i class="sidebar-icon fas fa-book-medical"></i>
                 <span class="sidebar-text @ViewBag.FollowLinkClass">Following</span>
             </a>
-            <a href="#" class="sidebar-item">
+            <a href="@Url.Action("Report", "Manage")" class="sidebar-item">
                 <i class="sidebar-icon fas fa-bug"></i>
                 <span class="sidebar-text @ViewBag.ReportLinkClass">Reports</span>
             </a>
