Adding Admin Template

--- a/ActivityWebsite/Views/Shared/_Menu.cshtml
+++ b/ActivityWebsite/Views/Shared/_Menu.cshtml
@@ -61,8 +61,12 @@
                             <li>CALL US: + 1 800-567-8990</li>
                             <li>WRITE US: OFFICE@EXAMPLE.COM</li>
                             <li>OPENING TIMES: MON - FRI: 9:00 - 19:00</li>
+                            <li>
+                                <form class="form-inline my-2 my-lg-0" action="/club/search" method="get" >
+                                    <input name="name" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                                </form>
+                            </li>
                         </ul>
-                        <a href="#" class="primary-btn">JOIN US</a>
                     </div>
                 </div>
             </div>
