--- a/ActivityWebsite/Areas/Admin/Views/Category/Edit.cshtml
+++ b/ActivityWebsite/Areas/Admin/Views/Category/Edit.cshtml
@@ -41,7 +41,7 @@
         @Html.ValidationMessageFor(m => m.Description, "", new { @class = "text-danger" })
     </div>
 
-    <button type="submit" class="btn btn-primary">Create</button>
+    <button type="submit" class="btn btn-primary">Update</button>
 }
 
 @section scripts{
