--- a/ActivityWebsite/Views/Account/Register.cshtml
+++ b/ActivityWebsite/Views/Account/Register.cshtml
@@ -28,43 +28,45 @@
             </div>
         }
 
-        <div class="form-group">
-            @Html.LabelFor(m => m.Username, new { @class = "form-label" })
-            @Html.TextBoxFor(m => m.Username, new { @class = "form-input", @id = "name", @placeholder = "Eg: jonhdoe123" })
-            @Html.ValidationMessageFor(m => m.Username, "", new { @class = "text-danger" })
-        </div>
+        <div style="padding: 0 600px;">
+            <div class="form-group">
+                @Html.LabelFor(m => m.Username, new { @class = "form-label" })
+                @Html.TextBoxFor(m => m.Username, new { @class = "form-input", @id = "name", @placeholder = "Eg: jonhdoe123" })
+                @Html.ValidationMessageFor(m => m.Username, "", new { @class = "text-danger" })
+            </div>
 
-        <div class="form-group">
-            @Html.LabelFor(m => m.Email, new { @class = "form-label" })
-            @Html.TextBoxFor(m => m.Email, new { @class = "form-input", @placeholder = "Eg: jonhdoe123@gmail.com" })
-            @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
-        </div>
+            <div class="form-group">
+                @Html.LabelFor(m => m.Email, new { @class = "form-label" })
+                @Html.TextBoxFor(m => m.Email, new { @class = "form-input", @placeholder = "Eg: jonhdoe123@gmail.com" })
+                @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
+            </div>
 
-        <div class="form-group">
-            @Html.LabelFor(m => m.DisplayName, new { @class = "form-label" })
-            @Html.TextBoxFor(m => m.DisplayName, new { @class = "form-input", @placeholder = "Eg: Jonh Doe" })
-            @Html.ValidationMessageFor(m => m.DisplayName, "", new { @class = "text-danger" })
-        </div>
+            <div class="form-group">
+                @Html.LabelFor(m => m.DisplayName, new { @class = "form-label" })
+                @Html.TextBoxFor(m => m.DisplayName, new { @class = "form-input", @placeholder = "Eg: Jonh Doe" })
+                @Html.ValidationMessageFor(m => m.DisplayName, "", new { @class = "text-danger" })
+            </div>
 
-        <div class="form-group">
-            @Html.LabelFor(m => m.Password, new { @class = "form-label" })
-            @Html.PasswordFor(m => m.Password, new { @class = "form-input", @id = "password" })
-            @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
-        </div>
+            <div class="form-group">
+                @Html.LabelFor(m => m.Password, new { @class = "form-label" })
+                @Html.PasswordFor(m => m.Password, new { @class = "form-input", @id = "password" })
+                @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
+            </div>
 
-        <div class="form-group">
-            @Html.LabelFor(m => m.ConfirmPassword, new { @class = "form-label" })
-            @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-input", @id = "ConfirmPassword" })
-            @Html.ValidationMessageFor(m => m.ConfirmPassword, "", new { @class = "text-danger" })
-        </div>
+            <div class="form-group">
+                @Html.LabelFor(m => m.ConfirmPassword, new { @class = "form-label" })
+                @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-input", @id = "ConfirmPassword" })
+                @Html.ValidationMessageFor(m => m.ConfirmPassword, "", new { @class = "text-danger" })
+            </div>
 
-        <div class="form-group">
-            @Html.LabelFor(m => m.PhoneNumber, new { @class = "form-label" })
-            @Html.TextBoxFor(m => m.PhoneNumber, new { @class = "form-input", @placeholder = "9374 1472" })
-            @Html.ValidationMessageFor(m => m.PhoneNumber, "", new { @class = "text-danger" })
-        </div>
+            <div class="form-group">
+                @Html.LabelFor(m => m.PhoneNumber, new { @class = "form-label" })
+                @Html.TextBoxFor(m => m.PhoneNumber, new { @class = "form-input", @placeholder = "9374 1472" })
+                @Html.ValidationMessageFor(m => m.PhoneNumber, "", new { @class = "text-danger" })
+            </div>
 
-        <button type="submit" class="form-submit">Register</button>
+            <button type="submit" class="form-submit">Register</button>
+        </div>
     }
     <p class="signup-already">Already have an account ? <a href="@Url.Action("Login", "Account")" class="signup-already-link">Log In</a></p>
 </div>
