--- a/ActivityWebsite/Views/Home/About.cshtml
+++ b/ActivityWebsite/Views/Home/About.cshtml
@@ -1,6 +1,145 @@
 ﻿@{
     ViewBag.Title = "About";
+    ViewBag.BCHeader = "About";
+
+    ViewBag.BCActionText = "About";
+    ViewBag.BCAction = "About";
+    ViewBag.BCController = "Home";
 }
 
-<div id="root">
+@Html.Partial("_Breadcrumb")
+<!-- About Section Begin -->
+<section class="about spad">
+    <div class="container">
+        <div class="about__services">
+            <div class="row">
+                <div class="col-lg-3 col-md-4 col-sm-6">
+                    <div class="services__item">
+                        <img src="/Content/Media/Images/templates/about/af-1.png" alt="">
+                        <h5>Full Rejuvenation</h5>
+                        <p>Take the opportunity to deepen your own practice, relax, recuperate, and experience activity!</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-4 col-sm-6">
+                    <div class="services__item">
+                        <img src="/Content/Media/Images/templates/about/af-2.png" alt="">
+                        <h5>Extention Of Spring</h5>
+                        <p>
+                            Inspiration flows from every club!
+                        </p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-4 col-sm-6">
+                    <div class="services__item">
+                        <img src="/Content/Media/Images/templates/about/af-3.png" alt="">
+                        <h5>Against Aging</h5>
+                        <p>
+                            Helping you to have a healthy life!
+                        </p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-4 col-sm-6">
+                    <div class="services__item">
+                        <img src="/Content/Media/Images/templates/about/af-4.png" alt="">
+                        <h5>Slim Body</h5>
+                        <p>A standard, slender body with a beautiful body</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-7 p-0">
+                <div class="about__pic">
+                    <img src="/Content/Media/Images/templates/about/about-page-pic.png" alt="">
+                </div>
+            </div>
+            <div class="col-lg-5 p-0">
+                <div class="about__text">
+                    <div class="section-title">
+                        <img src="/Content/Media/Images/templates/icon.png" alt="">
+                        <h2>What We Do</h2>
+                        <p>
+                            Get calls and support from the nearest clubs and get free advice on eligibility to learn more about the program.
+                        </p>
+                    </div>
+                    <div class="about__bar">
+                        <div class="about__bar__item">
+                            <p>Breathing</p>
+                            <div id="bar1" class="barfiller">
+                                <span class="tip"></span>
+                                <span class="fill" data-percentage="82"></span>
+                            </div>
+                        </div>
+                        <div class="about__bar__item">
+                            <p>Methabolism</p>
+                            <div id="bar2" class="barfiller">
+                                <span class="tip"></span>
+                                <span class="fill" data-percentage="73"></span>
+                            </div>
+                        </div>
+                        <div class="about__bar__item">
+                            <p>Flexibility</p>
+                            <div id="bar3" class="barfiller">
+                                <span class="tip"></span>
+                                <span class="fill" data-percentage="82"></span>
+                            </div>
+                        </div>
+                        <div class="about__bar__item">
+                            <p>Strongness</p>
+                            <div id="bar4" class="barfiller">
+                                <span class="tip"></span>
+                                <span class="fill" data-percentage="86"></span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- About Section End -->
+
+<!-- Counter Begin -->
+<div class="counter spad">
+    <div class="container">
+        <div class="counter__text set-bg" data-setbg="/Content/Media/Images/templates/counter/counter-bg.jpg">
+            <div class="counter__item">
+                <div class="counter__item__icon">
+                    <img src="/Content/Media/Images/templates/counter/counter-1.png" alt="">
+                </div>
+                <div class="counter__item__text">
+                    <h2>2146</h2>
+                    <p>Participants</p>
+                </div>
+            </div>
+            <div class="counter__item">
+                <div class="counter__item__icon">
+                    <img src="/Content/Media/Images/templates/counter/counter-2.png" alt="">
+                </div>
+                <div class="counter__item__text">
+                    <h2>15</h2>
+                    <p>Years Of Experience</p>
+                </div>
+            </div>
+            <div class="counter__item">
+                <div class="counter__item__icon">
+                    <img src="/Content/Media/Images/templates/counter/counter-3.png" alt="">
+                </div>
+                <div class="counter__item__text">
+                    <h2>48</h2>
+                    <p>Branches</p>
+                </div>
+            </div>
+            <div class="counter__item">
+                <div class="counter__item__icon">
+                    <img src="/Content/Media/Images/templates/counter/counter-4.png" alt="">
+                </div>
+                <div class="counter__item__text">
+                    <h2>234</h2>
+                    <p>Expert Staffs</p>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
+<!-- Counter End -->
