--- a/ActivityWebsite/Views/Home/Contact.cshtml
+++ b/ActivityWebsite/Views/Home/Contact.cshtml
@@ -1,17 +1,62 @@
 ﻿@{
     ViewBag.Title = "Contact";
+    ViewBag.BCHeader = "Contact";
+
+    ViewBag.BCActionText = "Contact";
+    ViewBag.BCAction = "Contact";
+    ViewBag.BCController = "Home";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
 
-<address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
-</address>
-
-<address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
-</address>
+@Html.Partial("_Breadcrumb")
+<!-- Contact Section Begin -->
+<section class="contact spad">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-3 col-md-6 col-sm-6">
+                <div class="contact__widget__item">
+                    <span class="icon_phone"></span>
+                    <h4>Phone</h4>
+                    <p>+01-3-8888-6868</p>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 col-sm-6">
+                <div class="contact__widget__item">
+                    <span class="icon_pin_alt"></span>
+                    <h4>Phone</h4>
+                    <p>+01-3-8888-6868</p>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 col-sm-6">
+                <div class="contact__widget__item">
+                    <span class="icon_clock_alt"></span>
+                    <h4>Phone</h4>
+                    <p>+01-3-8888-6868</p>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 col-sm-6">
+                <div class="contact__widget__item">
+                    <span class="icon_mail_alt"></span>
+                    <h4>Phone</h4>
+                    <p>+01-3-8888-6868</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- Contact Section End -->
+<!-- Map Begin -->
+<div class="map">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d49116.39176087041!2d-86.41867791216099!3d39.69977417971648!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x886ca48c841038a1%3A0x70cfba96bf847f0!2sPlainfield%2C%20IN%2C%20USA!5e0!3m2!1sen!2sbd!4v1586106673811!5m2!1sen!2sbd"
+            height="500" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+    <div class="map-inside">
+        <i class="icon_pin"></i>
+        <div class="inside-widget">
+            <h5>New York</h5>
+            <ul>
+                <li>Phone: +65 11.188.888</li>
+                <li>Add: 60-49 Road 11378 New York</li>
+            </ul>
+        </div>
+    </div>
+</div>
+<!-- Map End -->
