--- a/ActivityWebsite/Areas/Admin/Views/Index.cshtml
+++ b/ActivityWebsite/Areas/Admin/Views/Index.cshtml
@@ -11,8 +11,9 @@
 </head>
 <body>
     <div id="root">
+        <h1>HELLO</h1>
     </div>
 </body>
 
-@Scripts.Render("~/dist/Admin/App.js")
+@*Scripts.Render("~/dist/Admin/App.js")*@
 </html>
